service-mesh-demo/a.yaml
apiVersion: v1
kind: Service
metadata:
  name: a
  labels:
    app: a
    service: a
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 80
  selector:
    app: a
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: a
      version: v1
  template:
    metadata:
      labels:
        app: a
        version: v1
    spec:
      serviceAccountName: a
      containers:
      - image: kennethreitz/httpbin
        imagePullPolicy: IfNotPresent
        name: a
        ports:
        - containerPort: 80
