service-mesh-demo/simple-upload-istio.yaml
apiVersion: v1
kind: Namespace
metadata:  
  labels:
    istio-injection: enabled
  name: test  
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-gateway
  namespace: test
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: simple-upload
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-rule
  namespace: test
spec:
  gateways:
    - app-gateway
  hosts:
    - "*"
  http:
  - route:
    - destination:
        host: upload-service.test.svc.cluster.local
        port:
          number: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: upload-service
  namespace: test
spec:
  selector:
    app: simple-upload
  ports:
  - protocol: TCP
    port: 5000
    nodePort: 32346
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-upload
  namespace: test
spec:
  selector:
    matchLabels:
      app: simple-upload
  template:
    metadata:
      name: simple-upload-app
      labels:
        app: simple-upload
    spec:      
      containers:
      - name: simple-upload
        image: c0ld/simple-upload:latest
        ports:
              - containerPort: 5000
