service-mesh-demo/http-route.yaml
apiVersion: policy.linkerd.io/v1beta1
kind: HTTPRoute
metadata:
  name: upload-http-route
  namespace: test
spec:
  parentRefs:
    - name: simple-upload
      kind: Server
      group: policy.linkerd.io
  rules:
    - matches:
      - path:
          value: "/"
        method: GET
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: authz
  namespace: test
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: simple-upload
  requiredAuthenticationRefs:
    - name: b
      kind: ServiceAccount
      namespace: b
